@@ -107,6 +107,10 @@ Release date: TBA
 
   Close #2877
 
+* Fixed false `undefined-loop-variable` for a function defined in the loop,
+  that uses the variable defined in that loop.
+
+  Close #202
 
 What's New in Pylint 2.3.0?
 ===========================
